--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,9 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.*
+mysql_data/
+redis_data/
 
 # temp directory
 .temp
