--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.0",
     "cacheable": "^1.10.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
     "mysql2": "^3.14.1",
